<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">猜词</string>
    <string name="action_settings">Settings</string>
    <string name="majority">多数派</string>
    <string name="minority">少数派</string>
    <string name="idiots">无知派</string>
    <string name="total_players">总人数</string>
    <string name="num_chars">词字数</string>
    <string name="start_game">开始游戏</string>
    <string name="rule_name">%1$d玩家(%2$d,%3$d,%4$d)</string>
    <string name="word_num_name">%d 字词</string>
    <string name="player_name">玩家(%1$d)</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="exit_alert_title">确定要退出吗？</string>
    <string name="title_activity_start_game">StartGame</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="exit">退出</string>
    <string name="title_select_player_num">玩家人数</string>
    <string name="next_step">下一步</string>
    <string name="restart_game">重新开始</string>
    <string name="restart_game_alert">您确定要重新开始游戏吗？</string>
    
</resources>
